# ClarifyAgent

./: .env.example  CITATION_FORMAT_EXAMPLE.md  CLAUDE.md  LICENSE  README.md  README_TESTING.md  RESEARCH_STRATEGY_ANALYSIS.md  architecture_design.md  design_discussion.md  jina12.py  log.md  model_summary.md  pharma_research_benchmark.md  pyproject.toml  response.md  result.json  run_cli.py  run_web.py  simple_multi_request.py  test_citation_format.html  test_citation_replacement.py  test_multiple_requests.py  verify_implementation.py
src/clarifyagent/: agent.py  anthropic_model.py  clarifier.py  config.py  deepseek_model.py  dialog.py  executor.py  main.py  models.py  orchestrator.py  planner.py  prompts.py  schema.py  synthesizer.py  universal_clarifier.py  web.py
src/clarifyagent/agents/: base.py  pool.py  subagent.py
src/clarifyagent/static/: index.html
src/clarifyagent/tools/: base.py  concurrency_manager.py  enhanced_research.py  http_pool.py  intelligent_research.py  jina.py  scraper.py  serperapi.py
tests/: test_clarifier.py  test_clarifier_simple.py
