[project]
name = "clarifyagent"
version = "0.1.0"
description = "Deep Research Platform with Intelligent Clarification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "openai-agents[litellm]>=0.6.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clarifyagent"]

dependencies = [
    "google-search-results>=2.4.2",
    "openai-agents[litellm]>=0.6.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
